<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="_app_name" translatable="false">Crypto Economy</string>
    <string name="history">History</string>
    <string name="addresses">Addresses</string>
    <string name="pay">Pay</string>
    <string name="message_sign_validate">Message Sign/Validate</string>
    <string name="_openturnkey" translatable="false">OpenTurnKey</string>
    <string name="recipient_address">Recipient Address</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="read_nfc">Read NFC</string>
    <string name="select_from_address_book">Select From Address Book</string>
    <string name="paste_clipboard">Paste Clipboard</string>
    <string name="fees_low">Low (>60 minutes)</string>
    <string name="fees_mid">Mid (15~35 minutes)</string>
    <string name="fees_high">High (5~15 minutes)</string>
    <string name="currency_cny">CNY (Chinese Yen)</string>
    <string name="currency_jpy">JPY (Japanese Yen)</string>
    <string name="currency_twd">TWD (Taiwan Dollar)</string>
    <string name="currency_usd">USD (US Dollar)</string>
    <string name="currency_eur">EUR (Euro)</string>
    <string name="_unit_btc" translatable="false">BTC</string>
    <string name="_numerical_zero" translatable="false">0.0</string>
    <string name="_symbol_equal" translatable="false">=</string>
    <string name="amount">Amount</string>
    <string name="sign_payment">Sign Payment</string>
    <string name="tap_openturnkey">Tap OpenTurnKey</string>
    <string name="no_freq_addr">No Frequent Addresses</string>
    <string name="no_payment_records">No Payment Records</string>
    <string name="_by" translatable="false">BY</string>
    <string name="_cyphereco" translatable="false">CYPHERECO</string>
    <string name="local_currency">Local Currency</string>
    <string name="transaction_fee">Transaction Fee</string>
    <string name="fees_included">Fees included</string>
    <string name="clear_history">Clear History</string>
    <string name="search">Search</string>
    <string name="auth_with_pin">Authorization with PIN Code</string>
    <string name="set_pin_code">Set PIN Code</string>
    <string name="full_pubkey_information">Show Full Public Key Information</string>
    <string name="about">About</string>
    <string name="use_fixed_address">Use Fixed Address</string>
    <string name="set_key">Choose Key</string>
    <string name="unlock">Unlock</string>
    <string name="software_version">Software Version</string>
    <string name="ok">OK</string>
    <string name="cancel" tools:ignore="ButtonCase">CANCEL</string>
    <string name="clear_all_payment_history">Clear all payment history?</string>
    <string name="_left_bracket" translatable="false">(</string>
    <string name="_right_bracket" translatable="false">)</string>
    <string name="read_general_information">Read General Information</string>
    <string name="customized_fees">Customized Fees</string>
    <string name="_0_00001" translatable="false">0.00001</string>
    <string name="command_executed_successfully">Command Executed Successfully!</string>
    <string name="suggested">Suggested</string>
    <string name="nfc_unavailable">NFC is Not Available</string>
    <string name="title_activity_qrcode_scan">Scan QR Code</string>
    <string name="_dummy_button" translatable="false">Dummy Button</string>
    <string name="_dummy_content" translatable="false">DUMMY\nCONTENT</string>
    <string name="qr_code_scan_cancelled">QR Code Scan Cancelled</string>
    <string name="get_recipient_address">Get Recipient Address</string>
    <string name="operation_cancelled">Operation cancelled</string>
    <string name="transaction_not_executed">Transaction Not Executed</string>
    <string name="transaction_receipt">Transaction Receipt</string>
    <string name="subject_reason">Reason:</string>
    <string name="processing_transaction">Processing Transaction</string>
    <string name="recipient_is_empty">Recipient Address is Empty</string>
    <string name="amount_empty">Amount is not entered</string>
    <string name="incorrect_recipient_amount">Incorrect Recipient Address or Amount</string>
    <string name="sender">Sender</string>
    <string name="recipient">Recipient</string>
    <string name="subject_amount">Amount:</string>
    <string name="subject_time">Time:</string>
    <string name="user_guide">User Guide</string>
    <string name="add">Add</string>
    <string name="terminate">Terminate</string>
    <string name="confirm_terminate_op">Are you sure you want to terminate %s?</string>
    <string name="terminate_op">Terminate Operation</string>
    <string name="sign_message">Sign Message</string>
    <string name="btc_address">BTC Address</string>
    <string name="subject_note">Note:</string>
    <string name="btc_qr_code">BTC QR Code</string>
    <string name="lock_state">Lock State</string>
    <string name="battery_state">Battery State</string>
    <string name="mint_information">Mint Information</string>
    <string name="subject_account_balance">Account Balance:</string>
    <string name="add_address">Add Address</string>
    <string name="openturnkey_information">OpenTurnKey Information</string>
    <string name="fetching">Fetching…</string>
    <string name="address_copied">Address copied</string>
    <string name="please_wait">You can remove OpenTurnKey now. \n Please wait a moment.</string>
    <string name="use_all_funds">Use All Funds</string>
    <string name="operation_timeout">Operation Timeout</string>
    <string name="do_not_remove_otk">Please approach to OpenTurnKey to complete singing transaction.\nDo not remove OpenTurnKey until it\'s done.</string>
    <string name="confirm_payment">Confirm Payment</string>
    <string name="subject_text_estimated_time">"Est. Time to Complete: "</string>
    <string name="unknown_reason">Unknown Reason</string>
    <string name="signing_transaction">Signing Transaction</string>
    <string name="seg_wit_address_is_not_supported">SigWit Address is Not Supported at the moment</string>
    <string name="invalid_address">Invalid Address</string>
    <string name="alias">Alias</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="delete_address_dialog_message">Delete this address?</string>
    <string name="fail">FAIL</string>
    <string name="copy">Copy</string>
    <string name="subject_date_time">Date/Time:</string>
    <string name="subject_result">Result:</string>
    <string name="export_raw_data">Export Raw Data</string>
    <string name="subject_transaction_id">Transaction ID:</string>
    <string name="view_online">View Online</string>
    <string name="resend_payment">Resend Payment</string>
    <string name="delete_transaction_record">Delete transaction record</string>
    <string name="transaction_execution_status">Transaction Processing Status</string>
    <string name="failure_reason">Failure reason</string>
    <string name="previous_transaction_record">Previous Transaction Record</string>
    <string name="next_transaction_record">Next Transaction Record</string>
    <string name="subject_fees">Fees:</string>
    <string name="priority_time_needed">Priority (Time Needed)</string>
    <string name="edit_address">Edit Address</string>
    <string name="transaction_info">Transaction Information</string>
    <string name="raw_data">Raw Data</string>
    <string name="all_history_cleared">All history cleared</string>
    <string name="failed_to_clear_history">Clear History Failed</string>
    <string name="not_supported">Not supported</string>
    <string name="transaction_not_found">Transaction Not Found</string>
    <string name="failed_to_delete">Delete Failed</string>
    <string name="delete_this_transaction_record">Delete this transaction record?</string>
    <string name="otk_is_not_locked">OpenTurnKey is not locked</string>
    <string name="unlock_success">Unlock Successfully</string>
    <string name="unlock_failed">Unlock Failed</string>
    <string name="otk_is_unlocked">OpenTurnKey unlocked</string>
    <string name="write_note_success">Write Note Successfully</string>
    <string name="write_note_fail">Write Note Failed</string>
    <string name="title_set_pin">Set PIN</string>
    <string name="pin_length_incorrect">PIN code should be 8 digits</string>
    <string name="pin_confirmation_not_match">PIN codes do not match</string>
    <string name="enter_pin_code">"Please Enter a 8-digits Number "</string>
    <string name="write_note">Write Note</string>
    <string name="_unit_usd" translatable="false">USD</string>
    <string name="_unit_twd" translatable="false">TWD</string>
    <string name="_unit_eur" translatable="false">EUR</string>
    <string name="_unit_jpy" translatable="false">JPY</string>
    <string name="_unit_cny" translatable="false">CNY</string>
    <string name="currency_btc">BTC (Bitcoin)</string>
    <string name="write_note_hint">Note (No more than 64 characters)</string>
    <string name="check_balance">Checking balance, please wait …</string>
    <string name="set_pin_success">Set PIN Code Successfully</string>
    <string name="set_pin_fail">Set PIN Code Failed</string>
    <string name="_choose_key_hint" translatable="false">0~2147483647</string>
    <string name="warning">Warning!</string>
    <string name="choose_key_warning_message">You should backup the current key path or export the current key before changing it. Otherwise, You may lost the access to your current funds.</string>
    <string name="confirm">Confirm</string>
    <string name="invalid_key_path">Invalid Path</string>
    <string name="choose_key">Choose Key</string>
    <string name="choose_key_success">Choose Key Successfully</string>
    <string name="choose_key_fail">Choose Key Failed</string>
    <string name="get_key">Read Key Information</string>
    <string name="get_key_success">Read Key Information Successfully</string>
    <string name="get_key_fail">Read Key Information Failed</string>
    <string name="sign_message_fail">Sign Message Fail</string>
    <string name="sign_message_success">Sign Message Successfully</string>
    <string name="data_copied">Data copied</string>
    <string name="message_to_be_signed">Message to Be Signed</string>
    <string name="message_to_be_signed_hint">Message</string>
    <string name="signed_message">Signed Message</string>
    <string name="message_to_be_validated">Message to Be Validated</string>
    <string name="validate_signature">Validate Signature</string>
    <string name="using_master_key">Using Master Key</string>
    <string name="advance">Advance</string>
    <string name="export_private_key">Export Key</string>
    <string name="reset">Reset</string>
    <string name="export_private_key_wif_fail">Export Failed</string>
    <string name="export_private_key_wif_success">Export Successfully</string>
    <string name="reset_fail">Reset Command Not Sent</string>
    <string name="reset_success">Reset Command Sent</string>
    <string name="master_public_key">Master Public Key</string>
    <string name="derivative_public_key">Derivative Public Key</string>
    <string name="derivative_key_paths">Derivative Path:</string>
    <string name="how_to_validate">How to Validate?</string>
    <string name="pin_unset_msg">PIN code Is not set yet. Please set PIN code first with fingerprint authentication.</string>
    <string name="need_fp_preauth">To export the WIF Key, user must pre-authorized OpenTurnKey with fingerprint authentication!</string>
    <string name="wallet_import_format_key">Wallet Import Format Key</string>
    <string name="understood">I Understood!</string>
    <string name="reset_warning_message">Reset OpenTurnKey will erase the enrolled fingerprint. unset the PIN code, and choose a new random key. If you don\'t have a backup to the current key, you will lose the access to the current funds. Please be careful!</string>
</resources>