<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/label_export_key_string"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/wallet_import_format_key"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_export_key_string"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_export_key_string" />

    <ImageView
        android:id="@+id/imageView_export_key_qrcode"
        android:layout_width="match_parent"
        android:layout_height="192dp"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/btc_qr_code"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_export_key_string"
        app:srcCompat="@drawable/ic_scan_qrcode_foreground" />

    <ImageView
        android:id="@+id/wif_key_copy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/copy"
        android:tint="@color/colorButtonForeground"
        app:layout_constraintBottom_toBottomOf="@+id/label_export_key_string"
        app:layout_constraintStart_toEndOf="@+id/label_export_key_string"
        app:layout_constraintTop_toTopOf="@+id/label_export_key_string"
        app:srcCompat="@drawable/ic_content_copy_black_24dp" />

</android.support.constraint.ConstraintLayout>